# FileFlow

./: .gitignore  README.md  docker-compose.yml  nginx.conf  settings.py
backend/: Dockerfile  dependencies.py  main.py  pyproject.toml  requirements.txt  settings.py  utils.py
backend/UserStorage/admin/: LightsailDefaultKey-ap-northeast-1 (1).pem
backend/UserStorage/admin/test/: crud.py  分论知识点.docx
backend/api/: file.py  users.py
backend/db/: crud.py  database.py  models.py  schemas.py  sql.db  utils.py
backend/src/: dependencies.py  main.py  settings.py  utils.py
backend/src/api/: file.py  users.py
backend/src/db/: crud.py  database.py  models.py  sql.db
client/: main.py
frontend/: tailwind.config.js  vite.config.ts
frontend/mock/: login.ts  refreshToken.ts
frontend/public/: serverConfig.json
frontend/src/: App.vue
frontend/src/api/: routes.ts  user.ts  utils.ts
frontend/src/layout/components/: navbar.vue
frontend/src/store/modules/: user.ts
frontend/src/utils/: auth.ts  sso.ts
frontend/src/utils/http/: index.ts  types.d.ts
frontend/src/views/login/: index.vue
frontend/src/views/welcome/: index.vue
frontend/trash/: nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/trash/middleware/: cors.js
frontend/trash/pages/: index.vue  main.vue
frontend/web/components/: Banner.vue  FilesTable.vue  Logos.vue
frontend/web/pages/: index.vue
server/: main.py
web/: dependencies.py  main.py  test1.py  user.py
web/api/: file.py  users.py
web/db/: crud.py  models.py  schemas.py  sql.db
(+3 files in other folders)
