[tool.poetry]
name = "fileflow"
version = "0.1.0"
description = ""
authors = ["saya <c3313433633@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.104.0"
SQLAlchemy = "^2.0.22"
jose = "^1.0.0"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
