[tool.poetry]
name = "fileflow"
version = "0.1.0"
description = ""
authors = ["saya <c3313433633@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.4.2"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
pydantic-settings = "^2.0.3"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.104.0"
SQLAlchemy = "^2.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
